--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,37 @@
 
 body{
-	background-image: url(../images/biblebackground.jpg);
+	background-image: url();
+	background-color:yellow;
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
 
 }
 
+.warm{
+	background-color: red;
+}
+
+.cold{
+	background-color:blue;
+}
+
+.neutral {
+	background-color: yellow;
+}
+
 
 #quiz {
 	background-color: white;
-	opacity: .7;
+	
 	border: 3px solid black;
 	margin: 100px auto;
 	height: 500px;
 	width: 500px;
 	box-shadow: rgb(26, 31, 52) 4px 4px;
 	}
+
+
 
 h1 {
 	margin: 0 auto;
@@ -47,10 +62,15 @@ h1 {
 .reset button {
 	
 	text-align: center;
-	font-size: 2.5em;
+	font-size: 2em;
 
 }
 .reset {
 	margin-left: 20px;
 	display: none;
+}
+
+#map {
+	width: 500px;
+    height: 400px;
 }
