--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,87 @@
 
 body{
-	background-image: url();
-	background-color:yellow;
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
+	
+	background-image: url('/images/bluesky.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+  
+	
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
 
 }
-
 .warm{
-	background-color: red;
+	background-image: url('/images/hawaii.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .cold{
-	background-color:blue;
+	background-image: url('/images/alaska.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .neutral {
-	background-color: yellow;
+	background-image: url('/images/sky.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 
 #quiz {
-	background-color: white;
+	text-align: center;
+	margin: 0 auto;
+	max-width: 500px;
+	background-color: lightgrey;
+	font-family: 'Lora', serif;
 	
-	border: 3px solid black;
-	margin: 100px auto;
-	height: 500px;
-	width: 500px;
-	box-shadow: rgb(26, 31, 52) 4px 4px;
 	}
 
-
-
-h1 {
-	margin: 0 auto;
-	padding: .35em; 
-	border-bottom: 3px solid black;
-	text-align: center;
-	font-size: 3.5em;
-	font-weight: 900;
-}
-.question {
-	text-align: center;
+.result {
+	position:relative;
+	float:left;
+	width: 500px
 }
 
-.answers, .button-place {
-	color: purple;
-	background-color: orange;
-	padding-left: 1em;
-	font-size: 1.4em;
-
-}
-
-.right-or-wrong {
-	font-size: 3em;
-	font-weight: bolder;
-	text-align: center;
-}
-
-.reset button {
-	
-	text-align: center;
-	font-size: 2em;
-
-}
 .reset {
-	margin-left: 20px;
+	
+	display: none;
+}
+.coldend {
+	display: none;
+}
+.warmend {
 	display: none;
 }
 
 #map {
 	width: 500px;
     height: 400px;
+    margin: 0 auto;
+}
+
+.coldend, .warmend {
+	margin: 0 auto;
+	width: 500px;
+}
+
+ button, input[type=submit] {
+    background-color: white;
+    border-color: #ccc;
+        display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+   
+    cursor: pointer;
+    
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
