--- a/css/style.css
+++ b/css/style.css
@@ -99,41 +99,11 @@ body{
     border-radius: 4px;
 }
 
-
-
-.thermometer1 {
+.meter {
 	margin: 0 auto;
-	outline: solid white 1px;
-	width: 90%;
-	height: 30px;
-	background: linear-gradient(to right, red, blue 5% )
-}
-.thermometer2 {
-	margin: 0 auto;
-	outline: solid white 1px;
-	width: 90%;
-	height: 30px;
-	background: linear-gradient(to right, red , blue 35% )
-}
-.thermometer3 {
-	margin: 0 auto;
-	outline: solid white 1px;
-	width: 90%;
-	height: 30px;
+	outline: solid lightgrey 1px;
+	width: 100%;
+	height: 40px;
 	background: linear-gradient(to right, red, blue)
-}
-.thermometer4 {
-	margin: 0 auto;
-	outline: solid white 1px;
-	width: 90%;
-	height: 30px;
-	background: linear-gradient(to right, red 65%, blue)
-}
-.thermometer5 {
-	margin: 0 auto;
-	outline: solid white 1px;
-	width: 90%;
-	height: 30px;
-	background: linear-gradient(to right, red 95%, blue)
 }
 
